[gd_scene load_steps=10 format=3 uid="uid://cwjc4fhdhypuq"]

[ext_resource type="Script" uid="uid://d2rjmxl2igwol" path="res://scripts/entities/BasicEnemy.gd" id="1_ms2v3"]
[ext_resource type="Script" uid="uid://dfwhxucfyl7dh" path="res://scripts/components/Health.gd" id="2_hdbr1"]
[ext_resource type="Script" uid="uid://dd2p35ymhy7hf" path="res://scripts/components/Stats.gd" id="3_h68hl"]
[ext_resource type="Script" uid="uid://cvfnnuycn760h" path="res://scripts/components/Hurtbox.gd" id="4_2k6q3"]
[ext_resource type="Script" uid="uid://dshi8vv2cubep" path="res://scripts/weapons/MeleeWeapon.gd" id="5_1bv63"]
[ext_resource type="Script" uid="uid://qwppn725hg0q" path="res://scripts/components/Hitbox.gd" id="5_ttdkb"]
[ext_resource type="Script" uid="uid://bi64c68updv82" path="res://scripts/controllers/BasicEnemyController.gd" id="6_5aa28"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ms2v3"]
radius = 10.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7edt6"]
size = Vector2(15, 8)

[node name="FlyingEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 130
collision_mask = 128
motion_mode = 1
script = ExtResource("1_ms2v3")
lerp_amount = 0.005
metadata/_custom_type_script = "uid://cf7tf1fqn60bn"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -7.0
offset_top = -4.0
offset_right = 8.0
offset_bottom = 4.0
color = Color(0, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("CircleShape2D_ms2v3")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_hdbr1")
max_hp = 10
metadata/_custom_type_script = "uid://dfwhxucfyl7dh"

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("3_h68hl")
base_move_speed = 200.0
base_attack_damage = 1
base_attack_cooldown = 5.0
metadata/_custom_type_script = "uid://dd2p35ymhy7hf"

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health")]
collision_layer = 8
collision_mask = 16
script = ExtResource("4_2k6q3")
health = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://cvfnnuycn760h"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_7edt6")

[node name="MeleeWeapon" type="Node2D" parent="." node_paths=PackedStringArray("holder")]
script = ExtResource("5_1bv63")
hitbox_duration = 0.4
holder = NodePath("..")
metadata/_custom_type_script = "uid://dshi8vv2cubep"

[node name="HitboxComponent" type="Area2D" parent="MeleeWeapon"]
collision_layer = 32
collision_mask = 4
script = ExtResource("5_ttdkb")
metadata/_custom_type_script = "uid://qwppn725hg0q"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeWeapon/HitboxComponent"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_7edt6")

[node name="BasicEnemyController" type="Node" parent="." node_paths=PackedStringArray("entity")]
script = ExtResource("6_5aa28")
entity = NodePath("..")
metadata/_custom_type_script = "uid://bi64c68updv82"

[connection signal="area_entered" from="MeleeWeapon/HitboxComponent" to="MeleeWeapon/HitboxComponent" method="_on_area_entered"]
